// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBase highlighting should highlight first item 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-9-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-9-label"
            autocomplete="off"
            id="downshift-9-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-9-label"
            class="List"
            id="downshift-9-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectBase rendering should initially render empty component correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            id="downshift-0-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectBase with toggle arrow should show arrows when showArrow is true 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            id="downshift-1-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-1-label"
            class="List"
            id="downshift-1-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectBase with toggle arrow should toggle focus and the arrow when it is clicked 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-2-label"
            autocomplete="off"
            id="downshift-2-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-2-label"
            class="List"
            id="downshift-2-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
